# scheduling

./: app.py  pyproject.toml  requirements.txt
data/: example_people.csv  masses.npy
src/: scheduling.py
